# alif_mcuboot_example

./: CMakeLists.txt  README.md  alif_mcuboot.json  alif_mcuboot_with_update.json
RTE/: RTE_Components.h  RTE_Device.h  board.h
bootloader_app/: CMakeLists.txt
bootloader_app/linker_files/: gcc_M55_HE.ld
bootloader_app/src/: main.c
example_app/: CMakeLists.txt  write-update.jlink
example_app/linker_files/: gcc_M55_HE.ld
example_app/src/: hw.c  hw.h  main.c  mcumgr_handler.c  mcumgr_handler.h  mcumgr_transport.c  mcumgr_transport.h  mcumgr_transport_uart.c  mcumgr_transport_usb.c  mpu_M55.c  update.c  update.h  usb_desc.c
libs/: cmsis-dfp.cmake  cmsis.cmake  common_app_utils.cmake  mbedtls.cmake  mcuboot.cmake  mcumgr.cmake  mcumgr.patch  tinycbor.cmake  tinyusb.cmake
libs/cmsis-dfp/Alif_CMSIS/Source/: Driver_USART.c
libs/cmsis-dfp/Device/common/include/: clk.h
libs/cmsis-dfp/Device/common/source/: system_M55.c
libs/cmsis-dfp/Device/core/M55_HE/source/: startup_M55_HE.c
libs/cmsis-dfp/Device/core/M55_HP/source/: startup_M55_HP.c
libs/cmsis/CMSIS/CoreValidation/Project/: .clangd
libs/common_app_utils/logging/: retarget.c
libs/mcumgr/cmd/img_mgmt/include/img_mgmt/: img_mgmt_config.h
libs/mcumgr/cmd/log_mgmt/port/mynewt/: pkg.yml
mbedtls_config/: alif_mbedtls_config.h
mcuboot_config/mcuboot_config/: mcuboot_config.h
mcumgr_port/: mcumgr_img_port.c  mcumgr_os_port.c
tinyusb_config/: alif_tinyusb_config.h
tinyusb_port/: alif_dcd_reg.h  tusb_alif_dcd.c
